--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /app
 RUN mkdir -p /app && chown -R 1001:0 /app
 USER 1001
 
-# Copy package.json and package-lock.json first to leverage Docker caching
-COPY package.json package-lock.json /app/
+# Copy package.json first to leverage Docker caching
+COPY package.json /app/
 
 # Install dependencies
 RUN npm install --no-optional --no-audit --no-fund
