--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,9 @@ COPY package.json /app/
 RUN npm config set cache /tmp/npm-cache
 
 # Install dependencies with necessary flags
-RUN npm install --no-optional --no-audit --no-fund --unsafe-perm=true
+#RUN npm install --no-optional --no-audit --no-fund --unsafe-perm=true
+RUN npm config set registry https://registry.npmjs.org/ && npm install --no-optional --no-audit --no-fund --unsafe-perm=true
+
 
 # Copy the rest of the app files
 COPY . /app
