--- a/openshift/frontend-deployment.yaml
+++ b/openshift/frontend-deployment.yaml
@@ -1,11 +1,15 @@
-apiVersion: apps.openshift.io/v1
-kind: DeploymentConfig
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: react-dashboard
+  namespace: deepakagrawalmsoe-dev
+  labels:
+    app: react-dashboard
 spec:
   replicas: 1
   selector:
-    app: react-dashboard
+    matchLabels:
+      app: react-dashboard
   template:
     metadata:
       labels:
@@ -13,45 +17,64 @@ spec:
     spec:
       containers:
         - name: react-dashboard
-          image: ""
+          image: image-registry.openshift-image-registry.svc:5000/deepakagrawalmsoe-dev/react-dashboard:latest
           ports:
             - containerPort: 3000
-  strategy:
-    type: Source
-  triggers:
-    - type: ConfigChange
-    - type: ImageChange
-      imageChangeParams:
-        automatic: true
-        containerNames:
-          - react-dashboard
-        from:
-          kind: ImageStreamTag
-          name: 'react-dashboard:latest'
-  output:
-    to:
-      kind: ImageStreamTag
-      name: 'react-dashboard:latest'
+          env:
+            - name: NODE_ENV
+              value: "production"
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 15
+            periodSeconds: 10
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: react-dashboard
+  name: react-dashboard-service
+  namespace: deepakagrawalmsoe-dev
+  labels:
+    app: react-dashboard
 spec:
   selector:
     app: react-dashboard
   ports:
     - protocol: TCP
-      port: 3000
+      port: 80
       targetPort: 3000
+  type: ClusterIP
+
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: react-dashboard
+  name: react-dashboard-route
+  namespace: deepakagrawalmsoe-dev
+  labels:
+    app: react-dashboard
 spec:
   to:
     kind: Service
-    name: react-dashboard
+    name: react-dashboard-service
   port:
-    targetPort: 3000
+    targetPort: 80
+  tls:
+    termination: edge
+  wildcardPolicy: None
+
