--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,27 @@
-# Use an official Node.js image to build the React app
-FROM node:18 as build
+# Stage 1: Build React app
+FROM node:18 AS build
 
+# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json, then install dependencies
-COPY package.json /app/
+# Copy package files separately for better caching
+COPY package.json package-lock.json ./
+
+# Install dependencies
 RUN npm install
 
-# Copy the source files and build the app
-COPY . /app/
+# Copy the rest of the source files and build the React app
+COPY . .  
 RUN npm run build
 
-# Use a lightweight Nginx image to serve the React app
+# Stage 2: Use Nginx to serve the React app
 FROM nginx:alpine
+
+# Copy the built app from the build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose the default Nginx port
+# Expose port 80
 EXPOSE 80
 
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
